<resources>
    <string name="app_name">LXJ_SKYPE</string>
    <string name="SkyPe_btn">SKYPE登录</string>
    <string name="MS_btn">MicroSoft登录</string>
    <string name="todo">SkyPe</string>
    <string name="login">登&#160;&#160;录</string>
    <string name="New_Account">创建帐号</string>
    <string name="qq">QQ</string>
    <string name="WeChat">微信</string>
    <string name="telegram">Telegram</string>
    <string name="ali_pay">支付宝</string>
    <string name="user">用户名</string>
    <string name="passwd">密&#160;&#160;&#160;&#160;码</string>
    <string name="usertip">请输入用户名</string>
    <string name="passwdtip">请输入密码（6-9位数字）</string>
    <string name="exit">退出</string>

</resources>
