<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/grey_abstract"
    android:padding="@dimen/default_size"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="@dimen/large"
        android:layout_height="@dimen/large"
        android:gravity="center"
        android:background="@drawable/portrait_boy"
        android:layout_marginBottom="35dp">
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user"
            android:textSize="@dimen/default_size"
            android:textColor="@android:color/black"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/usertip"
            android:id="@+id/userdetail"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passwd"
            android:textSize="@dimen/default_size"
            android:textColor="@android:color/black"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/passwdtip"
            android:inputType="numberPassword"
            android:maxLength="9"
            android:id="@+id/passwddetail"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:gravity="center">

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/New_Account"
            android:textSize="@dimen/default_size"
            android:id="@+id/SignInBtn"
            android:background="@drawable/btn_signin"/>

    </LinearLayout>
</LinearLayout>